Fixed a bug where if the method contains was called with parameter 'null', a NullPointerException would be thrown.